tools/data-handler/test/test-data/valid/decision-records/.cards/local/reports/percentageReport/.schema
[
  {
    "version": 1,
    "id": "reportSchema",
    "file": "../percentageReport.json"
  }
]
