tools/data-handler/test/test-data/invalid/missing-cardTypes-subfolder/.cards/local/.schema
{
    "id": "cardsconfig-schema",
    "version": 1
}